feat: add proxy sync system with tab list, MOTD, chat formatting, and name tags
- Central proxy sync config (proxy/proxy.toml) for tab header/footer, player format, MOTD, and chat format
- Permission groups now support prefix, suffix, and priority for display formatting
- Tab list player names synced from Nimbus to all Velocity proxies via REST + WebSocket
- MOTD managed centrally and applied on proxy ping events
- Chat formatting on Paper backend via AsyncChatEvent with MiniMessage + legacy &-code support
- Player name tags (above head) synced via Scoreboard Teams matching tab display
- SDK API: Nimbus.setTabName()/clearTabName() overrides tab + nametag (for minigames)
- New commands: perms group setprefix/setsuffix/setpriority (console + /cloud)
- Shared event stream in cloud plugin (single WebSocket for all features)
- ColorUtil for translating legacy &-codes to MiniMessage format
- Fixed Nimbus.client() bug when using init(apiUrl, token)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>